src/_patterns/02-components/bolt-video/src/_videojs-enhancements.scss
// Vertically and horizontally center the default Brightcove share overlay content
.vjs-modal-dialog .vjs-modal-dialog-content {
  position: relative; // override position: absolute
  overflow-x: auto; // clearfix floated children
  height: auto; // override height: 100%
  max-width: 1024px;
  max-height: 56.25vw;
  margin: 0 auto;
}

.video-js .vjs-big-play-button.vjs-big-play-button {
  @include bolt-button-secondary;
  margin-top: auto;
  margin-left: auto;
  width: 4.5rem;
  height: 4.5rem;
  transform: translate3d(-50%, -50%, 0);
  box-shadow: 1px 2px 3px 0 rgba(47,49,50,0.15);
  transition: all $bolt-transition;

  &:focus {
    outline: none;
    box-shadow: 0 0 4px 3px rgb(59, 153, 252);
  }

  .vjs-icon-placeholder {
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .vjs-icon-placeholder:before {
    color: bolt-color(blue);
    position: relative;
    height: auto;
    width: auto;
    line-height: 1;
    pointer-events: none; // prevent clicks from sticking
  }
}

.video-js .vjs-control.vjs-close-button {
  padding: 1.4rem;

  > * {
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    justify-content: center;
    flex-direction: column;

    &:before {
      font-size: 1.4rem;
      height: auto;
      width: auto;
      position: relative;
    }
  }
}

.vjs-social-overlay .vjs-social-direct-link input, .vjs-social-overlay .vjs-social-embed-code input, .vjs-social-overlay .vjs-social-start-from input {
  font-size: 16px; // min 16px to prevent zooming
}

.video-js {
  display: flex;
  justify-content: center;
  align-items: center;
}

.video-js .vjs-modal-dialog {
  overflow: auto; // so psuedo layer below shows up
  box-sizing: border-box;
  z-index: 100;
  max-width: 768px;
  margin: 0 auto;
  overflow: visible; // override default overflow: hidden
  background: transparent; // override default gradient so the psuedo layer is the only backgrond showing up
  position: relative; // override position: absolute
  height: auto; // override height: 100%;

  &:before {
    content: '';
    display: block;
    background-color: rgba(bolt-color(black), 0.8);
    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0));
    width: auto;
    height: auto;
    position: absolute;
    top: -9999px;
    left: -9999px;
    bottom: -9990px;
    right: -9990px;
    opacity: 1;
    pointer-events: none;
  }
}

.vjs-social-overlay .vjs-social-description,
.vjs-social-overlay .vjs-social-title {
  white-space: normal;
}

